removed no-pad class from section col to fix the issue of the navbar not displaying correctly on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -232,6 +232,7 @@ body {
     background-image: url(images/treadmillopacity.png);
     background-repeat: no-repeat;
     background-size: cover;
+    width: 100%;
    
       
     
